some additional styling and fixing methods

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -3,7 +3,7 @@
 /*phone*/
 body {
     font-family: 'Cormorant Garamond', 'Arial', sans-serif;
-    background-color: #e6e6ee;
+    background-color: #f2fffc;
     line-height: 1.5;
     color: #8e0000;
 }
