--- a/src/components/PageHeader/PageHeader.css
+++ b/src/components/PageHeader/PageHeader.css
@@ -12,7 +12,7 @@ img {
     margin-top: -10px;
 }
 
-.h1-pageheader {
+.pageheader {
     margin-top: 15px;
     font-family: 'Kolker Brush', cursive;
     font-size: 65px;
