--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,3 +1,94 @@
 button {
 
 }
+
+.round-button {
+    display: inline-block;
+    border-radius: 50%;
+    background-color: #8e0000;
+    width: 60px;
+    height: 60px;
+    color: #e6e6ee;
+    transform: rotate(12deg);
+    margin-top: 15px;
+}
+
+.round-button:hover {
+    width: 65px;
+    height: 65px;
+    transform: rotate(15deg);
+}
+
+.download-button {
+    background-color: #86eadc;
+    margin: 15px;
+    border-radius: 10px;
+    font-size: 12px;
+    font-weight: bold;
+    width: 200px;
+    height: 30px;
+}
+
+.download-button:hover {
+    width: 205px;
+    height: 35px;
+}
+
+.delete-button {
+    background-color: #8e0000;
+    color: #e6e6ee;
+    margin: 15px;
+    border-radius: 10px;
+    font-size: 12px;
+    font-weight: bold;
+    width: 200px;
+    height: 30px;
+}
+
+.delete-button:hover {
+    width: 205px;
+    height: 35px;
+}
+
+.upload-button {
+    background-color: #86eadc;
+    margin: 15px;
+    border-radius: 10px;
+    font-size: 12px;
+    font-weight: bold;
+    width: 200px;
+    height: 30px;
+    color: black;
+}
+
+.upload-button:hover {
+    width: 205px;
+    height: 35px;
+}
+
+.media-button {
+    background-color: #8e0000;
+    color: #e6e6ee;
+    margin: 15px;
+    border-radius: 10px;
+    font-size: 12px;
+    font-weight: bold;
+    width: 200px;
+    height: 30px;
+}
+
+.media-button:hover {
+    width: 205px;
+    height: 35px;
+}
+
+.update-button {
+    background-color: #86eadc;
+    margin: 15px;
+    border-radius: 10px;
+    font-size: 12px;
+    font-weight: bold;
+    width: 200px;
+    height: 30px;
+    color: black;
+}
