--- a/src/pages/UserProfile/UserProfilePage.css
+++ b/src/pages/UserProfile/UserProfilePage.css
@@ -4,3 +4,16 @@
     justify-content: center;
     align-items: center;
 }
+
+h2 {
+    margin: 10px;
+}
+
+h3 {
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+
+.extra-info {
+    margin-bottom: 10px;
+}
